Render session#new within application layout
Primary motivation: this ensures that we render flash messages on this
page, when a flash message has been registered in the user's session.

Fixes a bug that was introduced in #2213 / 0189889 , where we added the
`layout: false`.

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,7 +21,7 @@
 
   %body{class: [@body_class, 'sans-serif'].map(&:presence).compact.join(' ')}
     - if notice.present?
-      %p.notice= notice
+      %p.p2.notice= notice
     - if alert.present?
-      %p.alert= alert
+      %p.p2.alert= alert
     = yield
