Allow adding notes for a store and include notes in store SMS message

--- a/app/views/sms_messages/grocery_list.text.erb
+++ b/app/views/sms_messages/grocery_list.text.erb
@@ -1,4 +1,7 @@
 == <%= store.name %>
+<% if store.notes.present? %>
+Notes: <%= store.notes %>
+<% end %>
 <% store.items.needed.sort_by { |item| item.name.downcase }.each do |item| %>
 - <%= item.name %> (<%= item.needed %>)
 <% end %>
