Set up Action Mailbox; use it to create log entries via email reply

--- a/app/views/log_reminder_mailer/reminder.haml
+++ b/app/views/log_reminder_mailer/reminder.haml
@@ -1,2 +1,6 @@
 %p Submit a new log entry here:
 %p= link_to(log_url(@log), log_url(@log))
+
+%p
+  %b Tip:
+  To create a log entry, you can simply reply to this email with the desired log entry content.
