--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
     %meta{property: 'og:title', content: title}
 
     -# other metadata
-    - if current_page?(controller: 'home', action: 'index')
+    - if current_page?(controller: '/home', action: 'index')
       %meta{name: 'author', content: 'David Runger'}
       %meta{property: 'og:type', content: 'website'}
       %meta{property: 'og:url', content: 'https://www.davidrunger.com/'}
