Allow AdminUsers to become(/impersonate/log-in-as) Users
There is the [`devise_masquerade`][1] gem that implements this, but it
seems simple enough to be worth just doing on our own?

[1]: https://github.com/oivoodoo/devise_masquerade

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -34,6 +34,10 @@
     = content_for(:extra_javascript)
 
   %body{class: [@body_class, 'sans-serif'].map(&:presence).compact.join(' ')}
+    - if user_signed_in? && admin_user_signed_in? && (current_user.email != current_admin_user.email)
+      .center.p1.bg-aqua
+        = link_to('Unbecome', unbecome_admin_user_path(current_user))
+        = current_user.email
     - if notice.present?
       %p.p2.notice= notice
     - if alert.present?
