--- a/app/views/quizzes/new.haml
+++ b/app/views/quizzes/new.haml
@@ -1,4 +1,6 @@
+%h1 New Quiz
+
 = form_with model: @quiz do |form|
   = form.label :name
   = form.text_field :name
-  = form.submit
+  = form.submit('Create quiz')
