Add quiz leaderboards (both for in-progress quiz and for closed quiz)

--- a/app/views/quiz_questions/_closed.html.haml
+++ b/app/views/quiz_questions/_closed.html.haml
@@ -4,3 +4,6 @@
     %span{class: answer.is_correct? ? 'bold' : ''} #{(index + 65).chr}. #{answer.content}
     - if answer.answering_participations.any?
       %span{class: answer.is_correct? ? 'green' : 'red'} (#{answer.respondents_list})
+
+%h3 Leaderboard
+= render partial: 'quiz/leaderboard', locals: { quiz: @quiz }
