--- a/app/views/quizzes/show/_active.html.haml
+++ b/app/views/quizzes/show/_active.html.haml
@@ -4,6 +4,11 @@
 - else
   = render partial: 'quiz_questions/closed', locals: { question: @quiz.current_question }
   - if @quiz.owned_by_current_user?
-    = form_with(model: @quiz) do |form|
-      = form.hidden_field(:current_question_number, value: @quiz.current_question_number + 1)
-      = form.submit('Next question')
+    - if @quiz.current_question_number < @quiz.questions.size
+      = form_with(model: @quiz) do |form|
+        = form.hidden_field(:current_question_number, value: @quiz.current_question_number + 1)
+        = form.submit('Next question')
+    - else
+      = form_with(model: @quiz) do |form|
+        = form.hidden_field(:status, value: 'closed')
+        = form.submit('Close quiz')
