--- a/app/views/question_uploads/new.html.haml
+++ b/app/views/question_uploads/new.html.haml
@@ -1,7 +1,9 @@
 .p3
   %h1 Upload questions for #{@quiz.name}
 
-  = form_with(url: quiz_question_uploads_path) do |form|
+  -# `turbo: false` here because otherwise we don't get the necessary bootstrap data
+  -# in the quiz show view after submitting this form (Turbo bug?)
+  = form_with(url: quiz_question_uploads_path, data: { turbo: false }) do |form|
     %div= form.label :questions
     %div= form.text_area :questions
     %div= form.submit
