Show all questions of "closed" quiz on final page
(...in addition to showing the final scores/leaderboard, of course)

--- a/app/views/quiz_questions/_closed.html.haml
+++ b/app/views/quiz_questions/_closed.html.haml
@@ -5,9 +5,10 @@
     - if answer.answering_participations.any?
       %span{class: answer.is_correct? ? 'green' : 'red'} (#{answer.respondents_list})
 
-%h3 Leaderboard
-= render partial: 'quiz/leaderboard', locals: { quiz: @quiz }
+- if !@quiz.closed?
+  %h3 Leaderboard
+  = render partial: 'quiz/leaderboard', locals: { quiz: @quiz }
 
-- if !@quiz.owned_by_current_user?
-  %h3 Progress
-  = render partial: 'quiz/progress', locals: { quiz: @quiz }
+  - if !@quiz.owned_by_current_user?
+    %h3 Progress
+    = render partial: 'quiz/progress', locals: { quiz: @quiz }
