--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -8,5 +8,4 @@
   - elsif @quiz.active?
     = render 'quizzes/show/active'
   - elsif @quiz.closed?
-    %h3 Final results
-    = render partial: 'quiz/leaderboard', locals: { quiz: @quiz }
+    = render 'quizzes/show/closed'
