--- a/app/views/question_uploads/new.html.haml
+++ b/app/views/question_uploads/new.html.haml
@@ -1,9 +1,37 @@
-.p3
-  %h1 Upload questions for #{@quiz.name}
+%h1 Upload questions for #{@quiz.name}
 
+%section
   -# `turbo: false` here because otherwise we don't get the necessary bootstrap data
   -# in the quiz show view after submitting this form (Turbo bug?)
   = form_with(url: quiz_question_uploads_path, data: { turbo: false }) do |form|
     %div= form.label :questions
-    %div= form.text_area :questions
-    %div= form.submit
+    %div= form.text_area :questions, size: '60x12'
+    %div.pt2= form.submit
+
+%section
+  %h2 Instructions
+
+  %ol
+    %li Put each question on its own line
+    %li Put each answer on a separate line below the question
+    %li Prefix the correct answer with a dash and space ("#{content_tag(:code, '- ')}")
+    %li Leave a blank line between each set of questions and answers
+
+  %h3 Example
+
+  %code.pre-wrap
+    :preserve
+      Which is biggest?
+      The earth
+      - The sun
+      The moon
+
+      Which is currently farther from the sun?
+      Neptune
+      - Pluto
+
+      Which has the hottest surface temperature?
+      Mercury
+      - Venus
+      Earth
+      Mars
