--- a/app/views/quiz_questions/_closed.html.haml
+++ b/app/views/quiz_questions/_closed.html.haml
@@ -2,7 +2,7 @@
 - question.answers.includes(:answering_participations).decorate.each_with_index do |answer, index|
   .pl1
     %span{class: answer.is_correct? ? 'bold' : ''} #{(index + 65).chr}. #{answer.content}
-    - if answer.answering_participations.any?
+    - if answer.answering_participations.present?
       %span{class: answer.is_correct? ? 'green' : 'red'} (#{answer.respondents_list})
 
 - if !@quiz.closed?
