--- a/app/assets/stylesheets/utils/font_family.scss
+++ b/app/assets/stylesheets/utils/font_family.scss
@@ -3,5 +3,16 @@
 }
 
 .sans-serif {
-  font-family: sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    "Roboto",
+    "Oxygen",
+    "Ubuntu",
+    "Cantarell",
+    "Fira Sans",
+    "Droid Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
