--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -2,7 +2,7 @@
 %html{class: browser.chrome? ? 'webp' : ''}
   %head
     %meta{charset: 'UTF-8'}
-    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1'}
+    %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, minimum-scale=1'}
 
     -# title
     - title = "#{@title.present? ? "#{@title} - " : ''}David Runger"
