Change `.container` to `#container` in application layout
When it was `.container`, it was triggering a style rule in the logs app
for text logs for `max-width: 1000px` for `.container`. I also think
that `#container` is conceptually more appropriate (since this is
intended to be the only one).

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -42,5 +42,5 @@
       %p.p2.notice= notice
     - if alert.present?
       %p.p2.alert= alert
-    .container{class: container_classes}
+    #container{class: container_classes}
       = yield
