--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,5 +1,5 @@
 !!! 5
-%html{class: browser.chrome? ? 'webp' : ''}
+%html{class: browser_support_checker.supports_webp? ? 'webp' : ''}
   %head
     %meta{charset: 'UTF-8'}
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, minimum-scale=1'}
