Don't require (but allow) a space after dash when uploading quiz ?'s

--- a/app/views/question_uploads/new.html.haml
+++ b/app/views/question_uploads/new.html.haml
@@ -14,7 +14,7 @@
   %ol
     %li Put each question on its own line
     %li Put each answer on a separate line below the question
-    %li Prefix the correct answer with a dash and space ("#{content_tag(:code, '- ')}")
+    %li Prefix the correct answer with a dash ("#{content_tag(:code, '-')}")
     %li Leave a blank line between each set of questions and answers
 
   %h3 Example
@@ -23,15 +23,15 @@
     :preserve
       Which is biggest?
       The earth
-      - The sun
+      -The sun
       The moon
 
       Which is currently farther from the sun?
       Neptune
-      - Pluto
+      -Pluto
 
       Which has the hottest surface temperature?
       Mercury
-      - Venus
+      -Venus
       Earth
       Mars
