--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -9,4 +9,4 @@
     %link{rel: "stylesheet", href: devicon_href}
 
 - content_for(:extra_javascript) do
-  = javascript_pack_tag('home_app', defer: true)
+  = js_tag('home_app')
