--- a/app/views/groceries/index.haml
+++ b/app/views/groceries/index.haml
@@ -4,4 +4,4 @@
     %link{rel: "stylesheet", href: asset_pack_path('groceries_app.css')}
 
 - content_for(:extra_javascript) do
-  = javascript_pack_tag('groceries_app', defer: true)
+  = js_tag('groceries_app')
