--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -1,5 +1,5 @@
 - content_for(:extra_javascript) do
-  = javascript_pack_tag('quizzes', defer: true)
+  = js_tag('quizzes')
 
 %h1= @quiz.name
 - if @quiz.unstarted?
