--- a/app/views/workouts/index.haml
+++ b/app/views/workouts/index.haml
@@ -4,4 +4,4 @@
     %link{rel: "stylesheet", href: asset_pack_path('workout_app.css')}
 
 - content_for(:extra_javascript) do
-  = javascript_pack_tag('workout_app', defer: true)
+  = js_tag('workout_app')
