Tweak quiz#show paddings, margins, and other minor UX details

--- a/app/views/quiz_questions/_answerers.html.haml
+++ b/app/views/quiz_questions/_answerers.html.haml
@@ -1,4 +1,3 @@
-.p1 Who has answered this question so far?
-%ol#quiz_participations#quiz_question_answer_selections
+%ol#quiz_participations#quiz_question_answer_selections.mt0.pl3
   - @quiz.participations.each do |participation|
     %li{id: dom_id(participation), class: @quiz.participation_answered_current_question?(participation) ? 'bold' : ''}= participation.display_name
