Improve styling of flash messages

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -3,6 +3,7 @@
 @import "components/spinner";
 @import "components/parallax";
 @import "elements/input";
+@import "flash";
 @import "utils/color";
 @import "utils/flex";
 @import "utils/font_family";
