--- a/app/views/quiz_questions/_open.html.haml
+++ b/app/views/quiz_questions/_open.html.haml
@@ -4,30 +4,20 @@
     = form.hidden_field(:status, value: QuizQuestion::CLOSED)
     = form.submit('Close question')
 - else
-  = render partial: 'quiz_questions/participant_view', locals: { question: @quiz.current_question }
+  = turbo_frame_tag 'quiz-question-participant-view' do
+    = render partial: 'quiz_questions/participant_view', locals: { question: @quiz.current_question }
 
-- already_answered = !@quiz.owned_by_current_user? && without_bullet { @quiz.current_question.decorate.answered_by_current_user? }
 .pt2
   %hr
   %h3 Respondents
-  - if already_answered
-    - @quiz = Quiz.includes(:participations).find(@quiz.id).decorate
-    = render partial: 'quiz_questions/respondents', locals: { question: @quiz.current_question }
-  - else
-    .mb2{data: { async_partial_src: respondents_quiz_path(@quiz), delay: 750 }}
-      [ ... loading respondents ... ]
+  .mb2{data: { async_partial_src: respondents_quiz_path(@quiz), delay: 750 }}
+    [ ... loading respondents ... ]
   %hr
   %h3 Leaderboard
-  - if already_answered
-    = render partial: 'quiz/leaderboard', locals: { quiz: @quiz }
-  - else
-    .mb2{data: { async_partial_src: leaderboard_quiz_path(@quiz), delay: 1000 }}
-      [ ... loading leaderboard ... ]
+  .mb2{data: { async_partial_src: leaderboard_quiz_path(@quiz), delay: 1000 }}
+    [ ... loading leaderboard ... ]
   - if !@quiz.owned_by_current_user?
     %hr
     %h3 Progress
-    - if already_answered
-      = render partial: 'quiz/progress', locals: { quiz: @quiz }
-    - else
-      %div{data: { async_partial_src: progress_quiz_path(@quiz), delay: 1250 }}
-        [ ... loading progress ... ]
+    %div{data: { async_partial_src: progress_quiz_path(@quiz), delay: 1250 }}
+      [ ... loading progress ... ]
