--- a/app/views/quiz_questions/_open.html.haml
+++ b/app/views/quiz_questions/_open.html.haml
@@ -11,13 +11,13 @@
   %hr
   %h3 Respondents
   .mb2{data: { async_partial_src: respondents_quiz_path(@quiz), delay: 750 }}
-    [ ... loading respondents ... ]
+    .spinner--circle
   %hr
   %h3 Leaderboard
   .mb2{data: { async_partial_src: leaderboard_quiz_path(@quiz), delay: 1000 }}
-    [ ... loading leaderboard ... ]
+    .spinner--circle
   - if !@quiz.owned_by_current_user?
     %hr
     %h3 Progress
     %div{data: { async_partial_src: progress_quiz_path(@quiz), delay: 1250 }}
-      [ ... loading progress ... ]
+      .spinner--circle
