--- a/app/assets/stylesheets/components/spinner.scss
+++ b/app/assets/stylesheets/components/spinner.scss
@@ -4,12 +4,13 @@
   border: 4px solid rgba(255, 255, 255, 0);
   border-top-color: 4px solid #7fc4d1;
   border-right-color: 4px solid #7fc4d1;
-  animation: spinner--circle 1.5s infinite linear;
+  animation: spinner--circle 2s infinite linear;
+  height: 20px;
+  width: 20px;
 }
 
 @keyframes spinner--circle {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
     border-top-color: #7fc4d1;
     border-right-color: #7fc4d1;
@@ -21,7 +22,6 @@
   }
 
   100% {
-    -webkit-transform: rotate(720deg);
     transform: rotate(720deg);
     border-top-color: #7fc4d1;
     border-right-color: #7fc4d1;
